spacing fixed

--- a/app/assets/stylesheets/components/_project.scss
+++ b/app/assets/stylesheets/components/_project.scss
@@ -1,11 +1,11 @@
 .project {
   display: flex;
   align-items: center;
-  width: 1100px;
+  width: 1200px;
 }
 
 .project-picture {
-  height: 300px;
+  height: 200px;
   width: 300px;
   border-radius: 4px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
@@ -19,4 +19,5 @@
 
 .product-description {
   flex: 1 0 auto;
+  margin: 0px 30px 30px 0px;
 }
